--- a/MovieBucket/app/build.gradle
+++ b/MovieBucket/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+    }
+    packagingOptions {
+        exclude 'META-INF/NOTICE' // will not include NOTICE file
+        exclude 'META-INF/LICENSE' // will not include LICENSE file
     }
     buildTypes {
         release {
@@ -24,7 +29,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile group: 'info.movito', name: 'themoviedbapi', version: '1.4'
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile group: 'info.movito', name: 'themoviedbapi', version:'1.4'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:support-vector-drawable:25.1.1'
     testCompile 'junit:junit:4.12'
 }
