--- a/MovieBucket/app/build.gradle
+++ b/MovieBucket/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     })
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile group: 'info.movito', name: 'themoviedbapi', version: '1.4'
+    compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
