--- a/MovieBucket/app/build.gradle
+++ b/MovieBucket/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile group: 'info.movito', name: 'themoviedbapi', version: '1.4'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.android.support:appcompat-v7:25.1.1'
