--- a/MovieBucket/app/build.gradle
+++ b/MovieBucket/app/build.gradle
@@ -30,11 +30,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile group: 'info.movito', name: 'themoviedbapi', version: '1.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile group: 'info.movito', name: 'themoviedbapi', version: '1.4'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:support-vector-drawable:25.1.1'
