--- a/MovieBucket/app/src/main/AndroidManifest.xml
+++ b/MovieBucket/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".Settings"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".MovieView" />
         <activity android:name=".PersonView"></activity>
