--- a/MovieBucket/app/src/main/AndroidManifest.xml
+++ b/MovieBucket/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" />
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".MovieView"
